--- a/OpenGLTest/OpenGLTest.vcxproj
+++ b/OpenGLTest/OpenGLTest.vcxproj
@@ -132,7 +132,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\GraphicsTest\GraphicsTest\Project1\glad.c" />
+    <ClCompile Include="glad.c" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
