--- a/OpenGLTest/OpenGLTest.vcxproj.filters
+++ b/OpenGLTest/OpenGLTest.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\GraphicsTest\GraphicsTest\Project1\glad.c">
+    <ClCompile Include="glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
