Race track, finish line, mesh overlapping check, follow cam interpolation, racemanager

--- a/OpenGLTest/OpenGLTest.vcxproj.filters
+++ b/OpenGLTest/OpenGLTest.vcxproj.filters
@@ -54,6 +54,15 @@
     <ClCompile Include="Model.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="RaceManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BoundingBox.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Vehicle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shader.h">
@@ -83,6 +92,15 @@
     <ClInclude Include="Model.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RaceManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BoundingBox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Vehicle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="VertexShader.vs">
@@ -104,6 +122,9 @@
       <Filter>Resource Files\Shaders</Filter>
     </None>
     <None Include="Outline.fs">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
+    <None Include="Color_FragmentShader.fs">
       <Filter>Resource Files\Shaders</Filter>
     </None>
   </ItemGroup>
