--- a/OpenGLTest/OpenGLTest.vcxproj
+++ b/OpenGLTest/OpenGLTest.vcxproj
@@ -134,6 +134,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\Dependencies\include\imgui\imgui.cpp" />
+    <ClCompile Include="..\Dependencies\include\imgui\imgui_demo.cpp" />
+    <ClCompile Include="..\Dependencies\include\imgui\imgui_draw.cpp" />
+    <ClCompile Include="..\Dependencies\include\imgui\imgui_impl_glfw.cpp" />
+    <ClCompile Include="..\Dependencies\include\imgui\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="..\Dependencies\include\imgui\imgui_tables.cpp" />
+    <ClCompile Include="..\Dependencies\include\imgui\imgui_widgets.cpp" />
     <ClCompile Include="BoundingBox.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="EBO.cpp" />
@@ -150,6 +157,15 @@
     <ClCompile Include="Vehicle.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Dependencies\include\imgui\imconfig.h" />
+    <ClInclude Include="..\Dependencies\include\imgui\imgui.h" />
+    <ClInclude Include="..\Dependencies\include\imgui\imgui_impl_glfw.h" />
+    <ClInclude Include="..\Dependencies\include\imgui\imgui_impl_opengl3.h" />
+    <ClInclude Include="..\Dependencies\include\imgui\imgui_impl_opengl3_loader.h" />
+    <ClInclude Include="..\Dependencies\include\imgui\imgui_internal.h" />
+    <ClInclude Include="..\Dependencies\include\imgui\imstb_rectpack.h" />
+    <ClInclude Include="..\Dependencies\include\imgui\imstb_textedit.h" />
+    <ClInclude Include="..\Dependencies\include\imgui\imstb_truetype.h" />
     <ClInclude Include="BoundingBox.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="EBO.h" />
